reorganize synth data post

--- a/posts/2024-05-19.md
+++ b/posts/2024-05-19.md
@@ -41,10 +41,10 @@ We'll start with the outcomes, which I hope will make sense, and then figure out
 It does mean we'll need some suspension of disbelief as we go, though; bear with me!
 I do hope that whichever prefix you can tolerate makes sense and is engaging, and am only certain that if we started with the SQL it would not be.
 
-1. [Demonstrating Materialize with auction data]()
-2. [Building an Auction loadgen from live random data]()
-3. [Building live random data from just SQL]()
-4. [All the SQL; really, just SQL]()
+1. [Demonstrating Materialize with auction data](https://github.com/frankmcsherry/blog/blob/master/posts/2024-05-19.md#demonstrating-materialize)
+2. [Building an Auction loadgen from live random data](https://github.com/frankmcsherry/blog/blob/master/posts/2024-05-19.md#auction-data-from-changing-moments)
+3. [Building live random data from just SQL](https://github.com/frankmcsherry/blog/blob/master/posts/2024-05-19.md#operational-data-from-thin-air)
+4. [All the SQL; really, just SQL](https://github.com/frankmcsherry/blog/blob/master/posts/2024-05-19.md#appendix-all-the-sql)
 
 ### Demonstrating Materialize
 
@@ -359,7 +359,7 @@ The consistency extends across multiple independent sessions.
 The moment you get confirmation that the insert into `fraud_accounts`, you can be certain that no one will see that account in the top five non-fraudulent auction winners.
 This guarantee is called "strict serializability", that the system behaves as if every event occurred at a specific time between its start and end, and is the strongest guarantee that databases provide.
 
-### From Moments to Plausible Data
+### Auction Data from Changing Moments
 
 Where do the `auctions` and `bids` data come from?
 You can get them from our load generator, but we're going to try and coax them out of raw SQL.
