Fix sentences that trailed off

--- a/posts/2024-05-19.md
+++ b/posts/2024-05-19.md
@@ -286,7 +286,8 @@ In our case, the updates are going to derive from our manipulation of `fraud_acc
 1718981380562	1	20403	7
 1718981380562	1	16584	7
 ```
-The data are not really changing much, on account of 
+The data are not really changing much, on account of the winners all having the same counts.
+But, this is actually good for us, because we can see what happens when we force a change.
 
 At this point, let's insert the record `17519` into `fraud_accounts`.
 ```
@@ -693,7 +694,7 @@ CREATE DEFAULT INDEX ON days;
 
 We'll want to create the same default indexes on our other views: `hours`, `minutes`, and `seconds`.
 Importantly, we want to create them in this order, also, to make sure that each relies on the one before it.
-If they did not, we would be back in the world of 
+If they did not, we would be back in the world of the previous section, where each would read ahead until the end of time (the year 2099, in this example).
 
 #### Finishing touches
 
