--- a/posts/2022-07-06.md
+++ b/posts/2022-07-06.md
@@ -300,6 +300,11 @@ from
     generate_series(x - 1, x + 1) as probe_x,
     generate_series(y - 1, y + 1) as probe_y;
 
+-- Each location reports some flavor of mine.
+create view reports as
+select x, y, get_byte(sha256((probe_x::text || probe_y::text)::bytes), 0) % 6 as mine, team, test
+from probes;
+
 -- The number of adjacent mines for probed locations.
 -- We include the center and subtract one to ensure we see a zero.
 create materialized view totals as
@@ -373,7 +378,7 @@ from (
             from totals
             where cells.x = totals.x
               and cells.y = totals.y
-              and cells.mine = totals.test
+              and cells.mine = totals.mine
               and cells.team = totals.team
         ),
         (   -- a `X` for mines correctly flagged by this team.
@@ -501,7 +506,7 @@ This is just a matter of looking at `totals` for counts of zero, and testing all
 -- We can test locations we know have no adjacent mines!
 -- In fact, we can do this over and over until we stop inserting things.
 create view should_test as
-select distinct new_x as x, new_y as y, test, team
+select distinct new_x as x, new_y as y, mine, team
 from
     (select * from totals where count = 0),
     generate_series(x - 1, x + 1) as new_x,
@@ -513,7 +518,7 @@ select * from distinct_tests;
 If we peek at the contents of this view, we'll see new locations that are safe to test.
 ```
 materialize=> select * from should_test where team = 'frank';
- x  | y  | test | team
+ x  | y  | mine | team
 ----+----+------+-------
   0 |  1 |    0 | frank
   0 | -1 |    0 | frank
