--- a/posts/2023-09-17.md
+++ b/posts/2023-09-17.md
@@ -1,3 +1,4 @@
+## A Guided Tour of Materialize's Product Principles
 
 This post is one in a series where we dive into the technical detail of Materialize's pillars of value.
 We will unpack what properties Materialize strives to do well, why they might be valuable to you, and how to see each happening (or not) in the platforms you might consider.
