--- a/posts/2024-10-19.md
+++ b/posts/2024-10-19.md
@@ -9,15 +9,15 @@ However, I took a slightly different path than the papers I read, and I thought 
 First, I'm largely drawing from the [egg paper](https://dl.acm.org/doi/10.1145/3434304), which you can find among other helpful resources on the [egg website](https://egraphs-good.github.io).
 Egg is among other things a Rust implementation of e-graphs, but also a fairly clear and clarifying presentation of the concepts.
 I recommend you start there, especially if in reading what follows you worry that I may have botched it all.
-Secondly, my implementation is the result of a few days of typing, and likely has innumerable defects.
+Secondly, my implementation is the result of a few days of typing, and likely has innumerable defects; I don't recommend you use it.
 
 We'll tell the story through a bit of code review, where I show off what I've written (a few hundred lines of Rust).
 
 ### For Starters: An Abstract Language
 
-E-graphs are about representing information about expressions in abstract languages.
+E-graphs represent information about expressions in abstract languages.
 We'll need one of these languages to get started.
-I'm going to use a concrete one for presentation, but one of the points of `egg` is that it is generic over your choice of language.
+I'm going to use a concrete language for presentation, but one of the points of `egg` is that it is generic over your choice of language.
 The only thing you need to point out is how many arguments each operator in your language requires, which we'll do with a trait:
 ```rust
 /// A type that requires inputs and produces an output.
@@ -50,7 +50,7 @@ For example, we could represent the expression `(a x 2) / 2` as:
 ```
 You can also think about putting these into expression trees, if that appeals to you.
 Each tree node would have an `Op` and a list of other tree nodes for their inputs.
-We won't be doing that.
+We won't be doing that, but it's a fine way to do things if you don't get stressed out by the allocations.
 
 We could write a parser and evaluator and such for this language, but we won't.
 At least, not yet, because they are not an essential part of understanding e-graphs.
@@ -58,16 +58,22 @@ At least, not yet, because they are not an essential part of understanding e-gra
 ### Introducing E-Graphs
 
 An e-graph is a compact way to represent "equivalence" information between expressions.
+"Equivalence" means something like "can be freely substituted for the other in all contexts", I'm hoping.
 Our expression above, `(a x 2) / 2`, is equivalent to the expression `a`.
 But, how might we both figure that out and represent it, efficiently?
 
-An e-graph is comprised of equivalences classes, called e-classes.
-An e-class contains a number of equivalent e-nodes.
-An e-node is a pair of an operator and a list of e-class identifiers as arguments.
+We will use a representation called an *e-graph*, short for (I think?) "equivalence graph".
+An e-graph represents sets of equivalent expressions, in equivalence classes each call an *e-class*.
+An e-class represents one set of equivalent expressions, but specifically it is a set of *e-nodes*.
+An e-node is a pair of an `Op` and as many e-class identifiers as the operator takes arguments.
+So, without understanding anything yet, an e-graph contains several e-classes, each of which contain several e-nodes, each of which references some e-classes.
 
-An expression (a sequence of operators) can be located in an e-graph by repeatedly replacing its operators with their e-class identifiers, starting at the back end and working forwards (or "up the tree", if you prefer trees).
+The intent with an e-node is to observe that we don't really care about the specific arguments to an `Op`, but really only about the equivalence class of each argument, represented by the e-class identifier.
+What's nice about this is that when you replace arguments with their e-class identifiers, more expressions can become equivalent.
+Moreover, if the operator is the same, and the inputs are equivalent, we can judge the results equivalent.
+Equating all expressions with the same operator and equivalent inputs is a process called "closure under congruence", and is one of the primary exciting properties of e-graphs.
 
-Here are the types I'll be using, building up the complexity from identifiers, to e-nodes, to e-classes, to e-graphs.
+Here are the Rust types I'll be using.
 ```rust
 /// An e-class identifier.
 pub type Id = usize;
@@ -76,51 +82,48 @@ pub type Id = usize;
 #[derive(Clone, Debug, PartialEq, Eq, PartialOrd, Ord)]
 pub struct ENode<T> {
     pub op: T,
-    pub args: Vec<Id>,
+    pub args: Vec<Id>,  // Could/should be a `SmallVec<Id>`.
 }
 
-/// An equivalence class of e-nodes, and references to this class.
-#[derive(Clone, Debug)]
-pub struct EClass<T> {
-    /// A list of e-nodes that map to this e-class.
-    pub members: BTreeSet<ENode<T>>,
-    /// A list of e-nodes that reference this e-class.
-    pub parents: BTreeSet<ENode<T>>,
-}
-
+/// An equivalence relation on e-nodes, closed under congruence.
+///
+/// The `self.nodes` member is the source of truth, but there are additional reverse
+/// indexes that allow us to go from e-class identifiers to the e-nodes that use them.
 #[derive(Clone, Debug)]
 pub struct EGraph<T> {
     /// A map from e-nodes to their e-class.
+    ///
+    /// This map acts as the source of truth, from which other members are derived.
+    /// Whenever this map is modified, we should also update the derived indices.
     pub nodes: BTreeMap<ENode<T>, Id>,
 
-    /// For each e-class, lists of class members and class parents.
-    pub classes: BTreeMap<Id, EClass<T>>,
+    /// A reverse index from e-class to the e-nodes with the e-class as an argument.
+    pub parents: BTreeMap<Id, BTreeSet<ENode<T>>>,
+    /// A reverse index from e-class to the e-nodes that belong to (map to) the e-class.
+    pub members: BTreeMap<Id, BTreeSet<ENode<T>>>,
 
-    /// A list of pending merge requests.
+    /// A list of pending requests to merge e-class pairs.
+    ///
+    /// These are not reflected in `self.nodes` until we refresh the e-graph.
     pub pending: Vec<(Id, Id)>,
 }
 ```
 
-The `EClass` struct has `members`, as advertised, but also a `parents` list.
-The `EGraph` struct has `classes`, as advertised, but also `nodes` and `pending`.
-What are all of these additional fields?
-
-I am happiest thinking of the `EGraph` as completely determined by the `nodes` member, which maps e-nodes to their e-class identifier.
-This fully describes the information of the e-graph.
-The `classes` member is a *view* over the `nodes` member: it tracks each *reference to* an e-class identifier.
-This view contains references both from `nodes` (the "members") as well as from references in the arguments of e-nodes (the "parents", because those e-nodes have the e-class as inputs).
-
-The `pending` member is an implementation detail that allows us to perform egg's deferred merging.
+The `EGraph` struct is centered around a map `nodes` from e-nodes to e-class identifiers.
+However, it also has reverse indexes from e-class identifiers back to e-nodes that map to them (`members`) and e-nodes that use the identifier as an argument (`parents`).
+These reverse indexes will be crucial for efficiently updating the e-graph as e-classes merge, and we must rewrite e-nodes to use new e-class identifiers.
+The `pending` member is an implementation detail that allows us to perform egg's "deferred merging".
 You'll see!
+
 The impressive thing, from my point of view, is that this is all you need to implement an e-graph.
-We will add some more moving parts, but these are the type definitions I'm using.
+We will add some more moving parts, but these are the actual type definitions I'm using.
 Egg adds some more derived indexes, e.g. from `Op` to `Id` for e-classes containing each operator, but still derived data from `nodes`.
 
 ### Working with E-Graphs
 
 What might you do with an e-graph?
 
-Here are the methods I've implemented, with the details hidden for the moment.
+Here are the methods I've implemented, with the details hidden for the moment behind `unimplemented!()`.
 We'll investigate them in turn, unpackaging the complexity in smaller bites.
 ```rust
 impl<T: Function + Ord + Clone> EGraph<T> {
@@ -147,19 +150,17 @@ impl<T: Function + Ord + Clone> EGraph<T> {
     pub fn refresh(&mut self) {
         unimplemented!()
     }
-
-    /// Attempts to minimize `expr` using equivalences.
-    pub fn extract(&self, expr: &mut Vec<T>) {
-        unimplemented!()
-    }
 }
 ```
 
-There are a rich variety of related methods you might want, for example perhaps because my demo-ware test harness didn't try to do anything too real.
-For example, it is natural to want a non-inserting `find` method, though I only ended up needing this in some pattern matching code, which couldn't use a general implementation.
+There are several other methods you may want, which we'll develop a bit later.
+For example, how do you get information out of an e-graph?
+How can you have the e-graph help you figure out which classes you should merge, automatically?
+Stuff like this.
 
-But roughly, the idea is that you might start from a fresh e-graph, insert some expression you are interested in, and then apply equivalences that match your understanding.
-Here's an example:
+For the moment, the idea is that you might start from a fresh e-graph, insert some expression you are interested in, and then apply equivalences that match your understanding.
+Here's an example, taken directly from the egg paper.
+Ah, their example is better, actually, because they apply general rules rather than hard-wired ones, but it's still a good starting point.
 ```rust
     // (a x 2) / 2
     let eggsample = vec![Op::Div, Op::Mul, Op::Var(0), Op::Lit(2), Op::Lit(2)];
@@ -188,42 +189,38 @@ Here's an example:
     );
     // Refresh the e-graph to reflect equated terms.
     e_graph.refresh();
+
+    println!("{}", e_graph);
 ```
 
 This is a worked example from the egg paper, where the narrative arc is that while swapping out `a x 2` for `a << 1` feels smart, it is even smarter to keep the `x 2` around to cancel the `/ 2`.
 When you introduce each of these equivalences (egg also *finds* the equivalences; more on that later), you end up with four equivalence classes:
 ```
-ENode (Mul [8, 0]) -> EClass #2
-ENode (Mul [8, 6]) -> EClass #8
-ENode (Div [0, 0]) -> EClass #6
-ENode (Div [2, 0]) -> EClass #8
-ENode (Shf [8, 6]) -> EClass #2
-ENode (Lit(1) [])  -> EClass #6
-ENode (Lit(2) [])  -> EClass #0
-ENode (Var(0) [])  -> EClass #8
+EClass #0: -> [ Lit(2) ]
+EClass #3: -> [ Mul[3, 4], Div[5, 0], Var(0) ]
+EClass #4: -> [ Div[0, 0], Lit(1) ]
+EClass #5: -> [ Mul[3, 0], Shf[3, 4] ]
 ```
+
 This might actually be a good moment to see if you can read e-graph.
 
-Our `a` term is `Var(0)`, found in e-class `8`.
-Also in `8` is `Div [2, 0]`, which it turns out is the root of our inserted `eggsample` expression.
-You can see this by following e-classes `2` and `0`.
-E-class `2` contains `Mul [8, 0]`, where `8` contains `a` and `0` contains `Lit(2)`; this is the numerator in our expression.
+Our `a` term is `Var(0)`, found in e-class `3`.
+Also in `3` is `Div [5, 0]`, which it turns out is the root of our inserted `eggsample` expression.
+You can see this by following e-classes `5` and `0`.
+E-class `5` contains `Mul [3, 0]`, where `3` contains `a` and `0` contains `Lit(2)`; this is the numerator in our expression.
 E-class `0` contains `Lit(2)` which is the denominator of our expression.
 
 There are several other e-nodes in here, like `Lit(1)` and `Div [0, 0]`, which play a role in going from `(a x 2) / 2` to the much simpler `a`.
-I say going to "the much simpler `a`" but I didn't actually call `e_graph.extract(&eggsample)`, which is because I haven't written it yet.
-Let's look at the methods I did write, instead.
 
 #### Inserting in to E-Graphs
 
 Insertion of an expression into an e-graph isn't all that hard!
 
 Recall that an expression is a sequence of operators, in pre-order.
-We would be able to evaluate the expression by starting at the end and working forwards.
-Instead, we are going to "evaluate" the e-class identifier of the terms, in the same manner.
+We would be able to evaluate the expression by starting at the end and working back towards the front.
+Instead, we are going to "evaluate" the e-class identifier of the terms, looking them up in the e-graph, in the same manner.
 Starting at the end of the expression, or leaves of the tree if you prefer, we'll treat each operator as if it is an e-node, with e-class id arguments.
-We'll look up that e-node, "evaluating" it, and produce the e-class id as the output.
-In the case that we don't find the e-node, we'll create a new singleton e-class and insert it.
+We'll then look up that e-node, or insert it if it does not exist, and put the resulting e-class identifier onto our evaluation stack.
 
 ```rust
 /// Adds an expression to the e-graph.
@@ -235,43 +232,44 @@ pub fn insert(&mut self, mut expr: Vec<T>) -> Id {
     let mut ids = Vec::new();
     while let Some(op) = expr.pop() {
         let inputs = op.inputs();
-        let args = &ids[ids.len() - inputs..];
-        let e_node = ENode::new(op, args.iter().cloned().rev().collect());
-        // We may find the e-node, or we may not.
-        if let Some(id) = self.nodes.get(&e_node) {
-            ids.truncate(ids.len() - inputs);
-            ids.push(*id);
-        }
-        else {
-            // 1. Add `e_node` to parents of each element of `args`.
-            for e_class in args.iter() {
-                self.classes
-                    .get_mut(e_class)
-                    .unwrap()
-                    .parents
-                    .insert(e_node.clone());
-            }
-            // 2. Form a new e-class with `e_node` as its only member.
-            let e_class = EClass {
-                members: BTreeSet::from([e_node.clone()]),
-                parents: Default::default(),
-            };
-            let new_id = self.new_id();
-            self.classes.insert(new_id, e_class);
-            // 3. Add `e_node` to `self.nodes`.
-            self.nodes.insert(e_node, new_id);
-            ids.truncate(ids.len() - inputs);
-            ids.push(new_id);
-        }
+        let args = ids[ids.len() - inputs..].iter().cloned().rev();
+        let id = self.ensure(ENode::new(op, args));
+        ids.truncate(ids.len() - inputs);
+        ids.push(id);
     }
-    // The last step of each branch above is to push into `ids`.
+
     ids.pop().unwrap()
 }
 ```
 
-Although a bit fiddly, what with the order of arguments and such, the implementation isn't too complicated, to my eyes.
+There is a helper method `ensure` that it's worth looking at.
+The method first looks for the e-node, and if it doesn't find it it mints a new e-class identifier, and inserts the e-node with that e-class identifier.
+Insertion amounts to inserting into `self.nodes`, but also first updating the reverse indexes.
+```rust
+/// Ensures that an e-node is present in the e-graph, and returns its e-class id.
+///
+/// If the e-node is not initially present, it is added and a new e-class is set up.
+fn ensure(&mut self, e_node: ENode<T>) -> Id {
+    if let Some(id) = self.nodes.get(&e_node) {
+        *id
+    }
+    else {
+        let new_id = self.new_id();
+        // 1. Add e_node to parents of each element of `args`.
+        for e_class in e_node.args.iter() {
+            self.parents.entry(*e_class).or_default().insert(e_node.clone());
+        }
+        // 2. Form a new e-class with `e_node` as its only member.
+        self.members.insert(new_id, BTreeSet::from([e_node.clone()]));
+        // 3. Add `e_node` to `self.nodes`.
+        self.nodes.insert(e_node, new_id);
+        new_id
+    }
+}
+```
 The main risk is when adding an e-node: care must be taken to set all invariants correctly, especially around how `self.classes` is meant to mirror `self.nodes`.
 This code would need to change were any other views and indexes over `self.nodes` introduced.
+For completeness, the `new_id()` function just adds one to the largest e-class identifier we have in a map (they are b-trees, and looking at the maximum key is cheap).
 
 You may have noticed above, but this also gives us our `EGraph::equate` implementation as well.
 If you scroll up, it inserts its two arguments, and then enqueues a merge between them.
@@ -298,10 +296,17 @@ There are two main things that need to happen when merges are processed:
     This prompts more merging work that must be completed before the congruence invariant is restored.
     
 We'll structure our approach as a loop that applies these steps in order, repeatedly, until there is no pending merge work to do.
+We'll go fragment by fragment, to reveal the structure.
 ```rust
-/// Applies all pending merges, and restores invariants.
-pub fn refresh(&mut self) {
+/// Applies pending merges and restores invariants. Returns true if any merges occurred.
+pub fn refresh(&mut self) -> bool {
 
+    // Record the initial number of e-classes.
+    let prior_classes = self.members.len();
+    
+    // Continue for as long as there are pending merges.
+    // Stopping early is not an option, as merges that are produced
+    // must be resolved to restore the "congruence" invariant.
     while !self.pending.is_empty() {
 ```
 
@@ -313,22 +318,25 @@ It just turns out I've forgotten how to write anything other than union-find.
 Also, I forgot how to write union-find, and had to read the wikipedia page to get it correct.
 
 ```rust
-        // Plan out all merges from pending using union-find.
-        // The `union` and `find` methods are in a helper trait, elsewhere.
+        // 0. Plan merges between e-classes.
         let mut uf = BTreeMap::new();
-        for (a, b) in self.pending.iter().copied() {
-            uf.union(&a, &b);
-        }
-        // Force each identifier to point at its component id.
-        // Union-find doesn't usually do this in `find`, but mine does.
-        for (a, b) in self.pending.drain(..) {
-            uf.find(&a);
-            uf.find(&b);
-        }
-        // Form each group, as a map from id back to a list of member ids.
+        for (a, b) in self.pending.iter().copied() { uf.union(&a, &b); }
+        // Groups of e-classes that will each be merged into one e-class.
         let mut new_classes = BTreeMap::new();
-        for (a, b) in uf.iter() {
-            new_classes.entry(*b).or_insert_with(Vec::new).push(*a);
+        for x in self.pending.drain(..).flat_map(|(a, b)| [a, b]) {
+            let root = *uf.find(&x).unwrap();
+            new_classes.entry(root).or_insert_with(BTreeSet::new).insert(x);
+        }
+        // Map for each merged e-class to its representative e-class identifier.
+        // Choose the e-class with the most members and parents as the representative.
+        let mut new_nodes = BTreeMap::new();
+        for (_root, e_class) in new_classes.iter() {
+            // Choose the new id to be the e-class with the most combined members and parents.
+            // This minimizes the amount of work we'll have to do to refresh the stale e-nodes.
+            let new_id = *e_class.iter().map(|id| (self.members.get(&id).map(|m| m.len()).unwrap_or(0) + self.parents.get(&id).map(|p| p.len()).unwrap_or(0), id)).min().unwrap().1;
+            for id in e_class.iter().copied() {
+                new_nodes.insert(id, new_id);
+            }
         }
 ```
 
@@ -337,22 +345,24 @@ The `new_classes` map now has our lists of e-class identifiers to merge.
 The next step is doing something with those lists, namely writing down all the affected e-nodes, who must update their identifiers.
 
 ```rust
-        // Track e-nodes that must refresh, and remove all merged e-classes.
-        // We will rebuild the e-classes as we refresh the e-nodes.
+        // 1. Remove any defunct e-classes, and enqueue their e-nodes for refresh.
         let mut refresh = BTreeSet::new();
-        for (_id, class) in new_classes {
+        for (_root, class) in new_classes {
             for e_class in class {
-                let e_class = self.classes.remove(&e_class).unwrap();
-                refresh.extend(e_class.members);
-                refresh.extend(e_class.parents);
+                if new_nodes[&e_class] != e_class {
+                    if let Some(members) = self.members.remove(&e_class) {
+                        refresh.extend(members);
+                    }
+                    if let Some(parents) = self.parents.remove(&e_class) {
+                        refresh.extend(parents);
+                    }
+                }
             }
         }
 ```
 
 We totally removed the merged e-classes, and only wrote down the e-nodes that were present in them.
 We will rebuild the merged class as part of updating the identifiers; recall that the information is a view over `self.nodes`, and we can rebuild it.
-Egg saves some time by not doing this work for the e-class whose identifier we end up using for each merge, but it seemed like something I would get wrong.
-I do think you need to do this, specifically preserving the identifier of the largest e-class, to avoid quadratic behavior, so I should probably get on that.
 
 The next step, last in each iteration, is to update all of the e-nodes.
 This isn't too hard, conceptually.
@@ -360,36 +370,24 @@ We remove all references to the old e-nodes, update them, and then insert all re
 While re-inserting into `self.nodes`, we may find the node already present (!!), which requires that we schedule a merge between those two e-classes.
 
 ```rust
-        // Refresh e-nodes; remove evidence of their old self, introduce them
-        // to the e-classes they now reference. Should any refreshed e-nodes
-        // match, but with different e-class identifiers, merge those e-classes.
+        // 2. Refresh each stale e-node.
         for mut e_node in refresh {
-            // Extract the stale e-node and its e-class.
-            let mut id = self.nodes.remove(&e_node).unwrap();
-            // Remove evidence of the stale e-node.
-            if let Some(e_class) = self.classes.get_mut(&id) {
-                e_class.members.remove(&e_node);
-            }
-            for arg in e_node.args.iter() {
-                if let Some(e_class) = self.classes.get_mut(arg) {
-                    e_class.parents.remove(&e_node);
-                }
-            }
+            let mut id = self.remove(&e_node).unwrap();
             // Update the e-classes referenced by the e-node.
-            if let Some(new) = uf.get(&id) {
+            if let Some(new) = new_nodes.get(&id) {
                 id = *new;
             }
             for arg in e_node.args.iter_mut() {
-                if let Some(id) = uf.get(arg) {
+                if let Some(id) = new_nodes.get(arg) {
                     *arg = *id;
                 }
             }
             // Introduce evidence of the refreshed e-node.
-            self.classes.entry(id).or_default().members.insert(e_node.clone());
+            self.members.entry(id).or_default().insert(e_node.clone());
             for arg in e_node.args.iter() {
-                self.classes.entry(*arg).or_default().parents.insert(e_node.clone());
+                self.parents.entry(*arg).or_default().insert(e_node.clone());
             }
-            // Re-add the e-node to `self.nodes`, and enqueue a merge if necessary.
+            // Re-introduce the e-node to the forward map, and enqueue a merge if necessary.
             if let Some(other) = self.nodes.insert(e_node, id) {
                 if other != id {
                     self.pending.push((other, id));
@@ -404,22 +402,13 @@ As we only ever merge e-classes, and always merge at least one e-class, the loop
 
 ```rust
     }
+    // If e-classes have vanished, merges occurred.
+    self.members.len() < prior_classes
 }
 ```
 
 That's the whole thing.
 E-graphs accomplished!
-I guess there was another method
-```rust
-    /// Attempts to minimize `expr` using equivalences from the e-graph.
-    pub fn extract(&self, _expr: &mut Vec<T>) {
-        unimplemented!()
-    }
-```
-
-Yeah, I haven't done it yet.
-There is fairly straight-foward iterative algorithm that establishes tentative representatives for each e-class, and then iteratively improves them by re-considering e-classes with e-nodes that references any changed representative.
-I did code this up, but I haven't gotten as far as rewriting `_expr` as the signature requires.
 
 ### Searching E-Graphs
 
