Update Recursive SQL

--- a/posts/2022-12-25.md
+++ b/posts/2022-12-25.md
@@ -7,6 +7,12 @@ You haven't been able to use this in Materialize yet though, for various reasons
 The good news is that as of quite recently, Materialize has preliminary (behind the `--unsafe-mode` flag) support for a tentatively named `WITH MUTUALLY RECURSIVE` clause. 
 This clause differs from SQL's `WITH RECURSIVE` in some important ways, and I'll explain what those are and why I'm excited about them.
 
+---
+
+**UPDATE (2024)**: Materialize's recursive SQL support landed and has now been live for all users for over a year. The `WITH MUTUALLY RECURSIVE` syntax has worked out great, users have responded positively, and you can [read more about it](https://materialize.com/docs/sql/select/recursive-ctes) and [try it out yourself](https://materialize.com/register/?utm_campaign=General&utm_source=documentation), both in the cloud and locally, as you prefer.
+
+---
+
 ## Recursion in SQL
 
 [SQL99](https://en.wikipedia.org/wiki/SQL:1999) introduced the very useful common table expressions (CTEs), and with them the `RECURSIVE` modifier that allowed *recursive* common table expressions.
