--- a/posts/2024-12-23.md
+++ b/posts/2024-12-23.md
@@ -41,11 +41,11 @@ The COST paper was about how many big data systems are all overhead, and rarely 
 At least, not on the data sets that they use in the evaluations presented in papers.
 That makes the papers not nearly as clever as folks thought they were, though (importantly) it doesn't mean the ideas are bad, just badly reasoned.
 
-The [post announcing the COST work](https://github.com/frankmcsherry/blog/blob/master/posts/2015-01-15.md) blew up, on Twitter (RIP) and Hacker News (of course; it is "I'm smarter than you all" catnip).
+The [post announcing the COST work](https://github.com/frankmcsherry/blog/blob/master/posts/2015-01-15.md) blew up, on Twitter (RIP) and Hacker News (it is "I'm smarter than you all" catnip).
 It is still the thing that I appear to be best known for, which I am conflicted about.
 Both that I did other neat things, and also that there are two other villianous co-authors who deserve credit as well.
-A run of other posts, working the recurring COST trope that many academics (seemingly) couldn't tell good systems from bad.
-I harbored a fantasy that this would change, but in classic Sci-Fi ending a literature search reveals that this same observation is made every five years or so, and then forgotten.
+I had a run of other posts, working the recurring COST trope that many academics (seemingly) couldn't tell good systems from bad.
+I harbored a fantasy that this would change, but in classic Sci-Fi ending style a literature search reveals that this same observation is made every five years or so, and then forgotten.
 
 This is also the year that I head out from the United States, first to Morocco (no posts, only chill) and then to Berlin.
 And then to the United Kingdom, and then to Switzerland.
@@ -91,7 +91,7 @@ The year ends with more time in Morocco, after which I apparently conclude I've 
 ## 2017
 
 The year of 2017 was the year of differential dataflow.
-I started 2017 out in Valparaiso, which was fascinating but really not great (for me) as a non-Spanish speak.
+I started 2017 out in Valparaiso, which was fascinating but really not great (for me) as a non-Spanish speaker.
 The years work starts with a [status report on differential dataflow](https://github.com/frankmcsherry/blog/blob/master/posts/2017-02-11.md), lays out [a roadmap](https://github.com/frankmcsherry/blog/blob/master/posts/2017-03-28.md), and generally tries to think more clearly about what to do.
 The year is also when I first seem to have landed upon [arrangements](https://github.com/frankmcsherry/blog/blob/master/posts/2017-05-01.md) as a way to organize data in differential dataflow.
 
